--- a/aws/cloudonly-template.yaml
+++ b/aws/cloudonly-template.yaml
@@ -5,16 +5,27 @@
     
     #Metadata:
     
-    #Parameters:
-    #    InstanceTypeParameter: 
-    #        Type: String
-    #        Default: t2.micro
-    #        AllowedValues: 
-    #        - t2.micro
-    #        - m1.small
-    #        - m1.large
-    #        Description: Enter t2.micro, m1.small, or m1.large. Default is t2.micro.
-    
+    Parameters:
+        Ec2KeyPair: 
+            Description: Amazon EC2 Key Pair
+            Type: "AWS::EC2::KeyPair::KeyName"
+            Default: blogpv-frankfurt-key
+        Ec2SecurityGroupId: 
+            Description: Security group shared by all resources
+            Type: "AWS::EC2::SecurityGroup::Id"
+            Default: sg-0b12b2191bf3951cf
+        Ec2InstanceType:
+            Description: Enter t2.micro, m1.small, or m1.large. Default is t2.micro.
+            Type: String
+            Default: t2.micro
+        Ec2ImageId:
+            Description: Amazon Linux AMI 2018.03.0 including Docker
+            Type: "AWS::EC2::Image::Id"
+            Default: ami-05ca073a83ad2f28c
+            # AllowedValues:
+            #    - ami-0d359437d1756caa8 # Ubuntu Server 18.04 LTS
+            #    - ami-05ca073a83ad2f28c # Amazon Linux AMI 2018.03.0 including Docker
+
     #Mappings:
     #  set of mappings
     
@@ -25,31 +36,30 @@
     #  set of transforms
     
     Resources:
-        Household1:
-            Type: "AWS::EC2::Instance"
-            Properties:
-                SecurityGroupIds:
-                  - sg-0b12b2191bf3951cf
-                # ImageId: ami-0d359437d1756caa8 # Ubuntu Server 18.04 LTS
-                ImageId: ami-031a03cb800ecb0d5 # Amazon Linux AMI 2018.03.0 including Docker
-                InstanceType: t2.micro
-                KeyName: blogpv-jk-ireland
-                Tags:
-                  - Key: project
-                    Value: blogpv
-                  - Key: Name
-                    Value: HouseholdVM
-                  - Key: Is_Houshold_Server
-                    Value: True
+        #Household1:
+        #    Type: "AWS::EC2::Instance"
+        #    Properties:
+                # SecurityGroupIds:
+                #   - sg-0b12b2191bf3951cf
+                # # ImageId: ami-05ca073a83ad2f28c # Ubuntu Server 18.04 LTS
+                # ImageId: ami-031a03cb800ecb0d5 # Amazon Linux AMI 2018.03.0 including Docker
+                # InstanceType: t2.micro
+                # KeyName: blogpv-frankfurt-key
+                # Tags:
+                #   - Key: project
+                #     Value: blogpv
+                #   - Key: Name
+                #     Value: HouseholdVM
+                #   - Key: Is_Houshold_Server
+                #     Value: True
         Netting1:
             Type: "AWS::EC2::Instance"
             Properties:
                 SecurityGroupIds:
-                    - sg-0b12b2191bf3951cf
-                # ImageId: ami-0d359437d1756caa8 # Ubuntu Server 18.04 LTS
-                ImageId: ami-031a03cb800ecb0d5 # Amazon Linux AMI 2018.03.0 including Docker
-                InstanceType: t2.micro
-                KeyName: blogpv-jk-ireland
+                    - !Ref Ec2SecurityGroupId
+                ImageId: !Ref Ec2ImageId
+                InstanceType: !Ref Ec2InstanceType
+                KeyName: !Ref Ec2KeyPair
                 Tags:
                     - Key: project
                       Value: blogpv
