--- a/household-server/docker/decentralized-energy-trading/package.json
+++ b/household-server/docker/decentralized-energy-trading/package.json
@@ -64,6 +64,7 @@
     "cors": "^2.8.5",
     "csv-writer": "^1.3.0",
     "express": "^4.16.4",
+    "express-swagger-generator": "^1.1.17",
     "gaussian": "^1.1.0",
     "js-sha256": "0.9.0",
     "keythereum": "^1.0.4",
