Adding container support for mongo-db

--- a/aws/cloudonly-template.yaml
+++ b/aws/cloudonly-template.yaml
@@ -71,6 +71,8 @@
                     Fn::Base64: !Sub |
                         #!/bin/bash -xe
                         yum install docker -y
+                        sudo service docker start
+                        sudo docker pull blogpvblossom/household-db:latest
 
     #Outputs:
     #  set of outputs
