glue-service version 0.1

--- a/data-services/smd-service/Dockerfile
+++ b/data-services/smd-service/Dockerfile
@@ -1,18 +1,11 @@
-FROM openethereum/openethereum:latest
-USER root
+FROM python:3.7-alpine
 
-# Add template for node configuration
-COPY --chown=openethereum template-node.toml /home/blogpv/template-node.toml
-
-# Add template for chain configuration
-COPY --chown=openethereum template-chain.json /home/blogpv/template-chain.json
-
-# Add package js
-RUN apk update && apk add jq && apk add bash
+# Add template for service configuration
+COPY template-smdservice.toml /home/blogpv/template-smdservice.toml
 
 # Add initialization script that executes at entrypoint
-COPY --chown=openethereum init.sh /home/blogpv/init.sh
-RUN ["chmod", "+x", "/home/blogpv/init.sh"]
-ENTRYPOINT [ "/home/blogpv/init.sh" ]
+# COPY --chown=openethereum init.sh /home/blogpv/init.sh
 
-USER openethereum
+RUN pip install -r requirements.txt
+
+CMD ["gunicorn", "-w 4", "main:app"]
