improved error handling for HTTP requests added retry package added helper classes

--- a/data-services/smd-service/src/Pipfile
+++ b/data-services/smd-service/src/Pipfile
@@ -15,6 +15,7 @@ plotly = "*"
 [packages]
 requests = ">=2.23.0"
 importer = {editable = true, path = "."}
+retry = "*"
 
 [requires]
 python_version = "3.8.3"
