- changed error handling - added environment variable handling (removed fixed URLs in code) - added API call for Smart Meter ID retrieval - added first draft of jupyter file

--- a/data-services/importer/Pipfile
+++ b/data-services/importer/Pipfile
@@ -16,6 +16,7 @@ plotly = "*"
 requests = ">=2.23.0"
 importer = {editable = true, path = "."}
 retry = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.8.3"
