added Jupyter Notebook Draft

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,34 @@ tmp/
 Discovergy_2020-07-30.json
 data-services/importer/dayimporter.egg-info
 Discovergy_2020-08-09.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-01.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-02.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-03.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-04.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-05.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-06.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-07.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-08.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-09.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-10.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-11.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-12.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-13.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-14.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-15.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-16.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-17.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-18.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-19.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-20.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-21.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-22.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-23.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-24.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-25.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-26.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-27.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-28.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-29.json
+data-services/importer/dayimporter/results/Discovergy_2020-07-31.json
+data-services/importer/dayimporter/results/Discovergy_2020-07.zip
